[json-lib] applied patch for 1746838